# logai-cpp

./: .env  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.logai  README.md  README_AGENT.md  build_and_run.sh  docker-compose.yml  fix_macos_build.sh  requirements.txt  setup_logai_agent.sh  start.sh
build_scripts/: Dockerfile.linux-arm64  Dockerfile.linux-x86_64  build_all.sh  build_macos_arm64.sh
docs/: DOCKER.md  LOGBERT.md
python/: README.md  logai_agent.py  logai_cpp_wrapper.py  logai_server.py  requirements.txt  setup.py
python/examples/: README.md  advanced_features.py  connection_drops.py  example_usage.py  interactive_query.py  log_clustering.py  performance_patterns.py  visualization_example.py
python/logai_cpp/: __init__.py  embeddings.py  milvus_client.py
python/samples/: sample_logs.jsonl
src/: CMakeLists.txt  cef_parser.cpp  csv_parser.cpp  csv_parser.h  data_loader_config.h  dbscan_clustering.h  dbscan_clustering_kdtree.h  drain_parser.cpp  drain_parser.h  duckdb_store.cpp  duckdb_store.h  env_setup.h  external_api_provider.h  feature_extractor.cpp  feature_extractor.h  file_data_loader.cpp  file_data_loader.h  gemini_vectorizer.cpp  gemini_vectorizer.h  json_parser.cpp  json_parser.h  jsonl_parser.cpp  label_encoder.cpp  label_encoder.h  line_parser.cpp  llama_provider.h  llm_interface.cpp  llm_interface.h  llm_provider.h  log4j_parser.cpp  log_parser.h  log_record.h  log_record_object.h  logai.cpp  logbert_vectorizer.h  logfmt_parser.cpp  memory_mapped_file.cpp  memory_mapped_file.h  multi_file_reader.cpp  multi_file_reader.h  (+18 more)
src/web_server/controllers/: AnomalyDetectionController.h  LogParserController.cpp  LogParserController.h
